@@ -7,12 +7,6 @@
 // author: Rupert Roeder, detlef oertel
 // credits: http://www.opsi.org/credits/
 
-//***************************************************************************
-// Subversion:
-// $Revision: 428 $
-// $Author: oertel $
-// $Date: 2016-05-02 16:56:42 +0200 (Mo, 02 Mai 2016) $
-//***************************************************************************
 
 unit oscrypt;
 
@@ -181,6 +175,7 @@ function md5fromFile(filename : string) : string;
    i: integer;
    s: string;
  begin
+   {$RANGECHECKS OFF}
    result := '';
    Source:= nil;
    try
@@ -200,6 +195,7 @@ function md5fromFile(filename : string) : string;
        s:= s + IntToHex(Digest[i],2);
      result := s;                              // return the digest
    end;
+   {$RANGECHECKS ON}
  end;
 
 end.
