@@ -62,6 +62,9 @@ opsi-winst/opsi-script (4.12.1.0) experimental; urgency=low
   * osshowsysinfo: caption is Systeminfo (instead of SystemInfo)
   * reencode(paramstr(0),'system')
   * remove some svn entries
+  * replace unit osxbase64 by fpc unit base64
+  * Release now compiled with activated Checks for IO, Range, Overflow and Stack
+  * unit oscrypt with {$RANGECHECKS OFF}
 
 -- Detlef Oertel <d.oertel@uib.de>  Wed, 23 01 2019:15:00:00 +0200
 
